--- a/frontend/unity-spa/features/admissions/apply.html
+++ b/frontend/unity-spa/features/admissions/apply.html
@@ -1,5 +1,5 @@
 <div class="max-w-3xl mx-auto bg-white shadow rounded p-6" ng-cloak>
-  <h1 class="text-2xl font-bold text-gray-800 mb-4">iACADEMY Makati Application Form</h1>
+  <h1 class="text-2xl font-bold text-gray-800 mb-4">Application Form</h1>
   <p class="text-sm text-gray-600 mb-6">Fill out the form below. On submit, your application will be saved and a confirmation email will be sent.</p>
 
   <form name="applyForm" novalidate ng-submit="vm.submit()">
@@ -8,7 +8,8 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">First Name <span class="text-red-500">*</span></label>
-          <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.first_name" required />
+          <input type="text" name="first_name" class="w-full border rounded px-3 py-2" ng-model="vm.form.first_name" ng-class="{'border-red-500': applyForm.first_name.$dirty &amp;&amp; applyForm.first_name.$invalid}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.first_name.$dirty &amp;&amp; applyForm.first_name.$error.required">First name is required.</div>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Middle Name</label>
@@ -16,7 +17,8 @@
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Last Name <span class="text-red-500">*</span></label>
-          <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.last_name" required />
+          <input type="text" name="last_name" class="w-full border rounded px-3 py-2" ng-model="vm.form.last_name" ng-class="{'border-red-500': applyForm.last_name.$dirty &amp;&amp; applyForm.last_name.$invalid}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.last_name.$dirty &amp;&amp; applyForm.last_name.$error.required">Last name is required.</div>
         </div>
       </div>
 
@@ -32,9 +34,66 @@
           <input type="date" class="w-full border rounded px-3 py-2" ng-model="vm.form.date_of_birth" />
         </div>
         <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1">Campus</label>
-          <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.campus" />
+          <label class="block text-sm font-medium text-gray-700 mb-1">Campus <span class="text-red-500">*</span></label>
+          <select name="campus" class="w-full border rounded px-3 py-2"
+                  ng-model="vm.selectedCampus"
+                  ng-options="c as (c.campus_name || c.name || ('Campus #' + c.id)) for c in vm.campuses track by c.id"
+                  ng-change="vm.onCampusChange()"
+                  ng-class="{'border-red-500': applyForm.campus.$dirty &amp;&amp; applyForm.campus.$invalid}"
+                  required>
+            <option value="">-- Select --</option>
+          </select>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.campus.$dirty &amp;&amp; applyForm.campus.$error.required">Campus is required.</div>
         </div>
+      </div>
+    </fieldset>
+
+    <fieldset class="mb-6">
+      <legend class="text-lg font-semibold text-gray-700 mb-3">Program</legend>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Student Level<span class="text-red-500">*</span></label>
+          <select name="student_type" class="w-full border rounded px-3 py-2"
+                  ng-model="vm.form.student_type"
+                  ng-options="t for t in vm.termTypes"
+                  ng-change="vm.onTermTypeChange()"
+                  ng-disabled="vm.loadingTerms || !vm.termTypes.length"
+                  ng-class="{'border-red-500': applyForm.student_type.$dirty &amp;&amp; applyForm.student_type.$invalid}"
+                  required>
+            <option value="">-- Select --</option>
+          </select>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.student_type.$dirty &amp;&amp; applyForm.student_type.$error.required">Student level is required.</div>
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Term <span class="text-red-500">*</span></label>
+          <select name="term" class="w-full border rounded px-3 py-2"
+                  ng-model="vm.form.term"
+                  ng-options="t.intID as t._label for t in vm.termOptions"
+                  ng-disabled="vm.loadingTerms || !vm.termOptions.length"
+                  ng-class="{'border-red-500': applyForm.term.$dirty &amp;&amp; applyForm.term.$invalid}"
+                  required>
+            <option value="">-- Select --</option>
+          </select>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.term.$dirty &amp;&amp; applyForm.term.$error.required">Term is required.</div>
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Program (First Choice) <span class="text-red-500">*</span></label>
+          <select name="type_id" class="w-full border rounded px-3 py-2" ng-model="vm.form.type_id" ng-options="p.id as p.title for p in vm.programs" ng-class="{'border-red-500': applyForm.type_id.$dirty &amp;&amp; applyForm.type_id.$invalid}" required>
+            <option value="">-- Select --</option>
+          </select>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.type_id.$dirty &amp;&amp; applyForm.type_id.$error.required">Program is required.</div>
+        </div>
+      </div>
+
+      <!-- Loading / empty-state messages for types/terms -->
+      <div class="mt-2 text-sm text-gray-500" ng-if="vm.loadingTerms">
+        Loading available student types and terms...
+      </div>
+      <div class="mt-2 text-sm text-amber-600" ng-if="!vm.loadingTerms &amp;&amp; vm.selectedCampus &amp;&amp; vm.termTypes.length === 0">
+        No open application student types for the selected campus at this time.
+      </div>
+      <div class="mt-2 text-sm text-amber-600" ng-if="!vm.loadingTerms &amp;&amp; vm.form.student_type &amp;&amp; vm.termOptions.length === 0">
+        No open terms for the selected student type.
       </div>
     </fieldset>
 
@@ -43,19 +102,29 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Email Address <span class="text-red-500">*</span></label>
-          <input type="email" class="w-full border rounded px-3 py-2" ng-model="vm.form.email" required />
+          <input type="email" name="email" class="w-full border rounded px-3 py-2" ng-model="vm.form.email" ng-class="{'border-red-500': applyForm.email.$dirty &amp;&amp; applyForm.email.$invalid}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.email.$dirty &amp;&amp; applyForm.email.$error.required">Email is required.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.email.$dirty &amp;&amp; !applyForm.email.$error.required &amp;&amp; applyForm.email.$error.email">Enter a valid email address.</div>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Confirm Email Address <span class="text-red-500">*</span></label>
-          <input type="email" class="w-full border rounded px-3 py-2" ng-model="vm.form.email_confirmation" required />
+          <input type="email" name="email_confirmation" class="w-full border rounded px-3 py-2" ng-model="vm.form.email_confirmation" ng-class="{'border-red-500': (applyForm.email_confirmation.$dirty &amp;&amp; applyForm.email_confirmation.$invalid) || (vm.form.email &amp;&amp; vm.form.email_confirmation &amp;&amp; vm.form.email !== vm.form.email_confirmation)}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.email_confirmation.$dirty &amp;&amp; applyForm.email_confirmation.$error.required">Confirmation email is required.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.email_confirmation.$dirty &amp;&amp; !applyForm.email_confirmation.$error.required &amp;&amp; applyForm.email_confirmation.$error.email">Enter a valid email address.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="vm.form.email &amp;&amp; vm.form.email_confirmation &amp;&amp; vm.form.email !== vm.form.email_confirmation">Email addresses do not match.</div>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Mobile Number <span class="text-red-500">*</span></label>
-          <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.mobile_number" required />
+          <input type="tel" name="mobile_number" class="w-full border rounded px-3 py-2" ng-model="vm.form.mobile_number" iti-tel ng-class="{'border-red-500': applyForm.mobile_number.$dirty &amp;&amp; applyForm.mobile_number.$invalid}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.mobile_number.$dirty &amp;&amp; applyForm.mobile_number.$error.required">Mobile number is required.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.mobile_number.$dirty &amp;&amp; !applyForm.mobile_number.$error.required &amp;&amp; applyForm.mobile_number.$error.tel">Enter a valid mobile number.</div>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Confirm Mobile Number <span class="text-red-500">*</span></label>
-          <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.mobile_number_confirmation" required />
+          <input type="tel" name="mobile_number_confirmation" class="w-full border rounded px-3 py-2" ng-model="vm.form.mobile_number_confirmation" iti-tel ng-class="{'border-red-500': (applyForm.mobile_number_confirmation.$dirty &amp;&amp; applyForm.mobile_number_confirmation.$invalid) || (vm.form.mobile_number &amp;&amp; vm.form.mobile_number_confirmation &amp;&amp; vm.form.mobile_number !== vm.form.mobile_number_confirmation)}" required />
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.mobile_number_confirmation.$dirty &amp;&amp; applyForm.mobile_number_confirmation.$error.required">Confirmation mobile number is required.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="applyForm.mobile_number_confirmation.$dirty &amp;&amp; !applyForm.mobile_number_confirmation.$error.required &amp;&amp; applyForm.mobile_number_confirmation.$error.tel">Enter a valid mobile number.</div>
+          <div class="text-xs text-red-600 mt-1" ng-if="vm.form.mobile_number &amp;&amp; vm.form.mobile_number_confirmation &amp;&amp; vm.form.mobile_number !== vm.form.mobile_number_confirmation">Mobile numbers do not match.</div>
         </div>
       </div>
     </fieldset>
@@ -78,24 +147,6 @@
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1">Country</label>
           <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.form.country" />
-        </div>
-      </div>
-    </fieldset>
-
-    <fieldset class="mb-6">
-      <legend class="text-lg font-semibold text-gray-700 mb-3">Program</legend>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1">Student Type <span class="text-red-500">*</span></label>
-          <select class="w-full border rounded px-3 py-2" ng-model="vm.form.student_type" ng-options="t for t in vm.studentTypes" required>
-            <option value="">-- Select --</option>
-          </select>
-        </div>
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1">Program (First Choice) <span class="text-red-500">*</span></label>
-          <select class="w-full border rounded px-3 py-2" ng-model="vm.form.type_id" ng-options="p.id as p.title for p in vm.programs" required>
-            <option value="">-- Select --</option>
-          </select>
         </div>
       </div>
     </fieldset>
