--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -254,6 +254,15 @@
   <script src="features/students/records.controller.js"></script>
   <!-- Admissions application feature -->
   <script src="features/admissions/apply.controller.js"></script>
+  <!-- Admissions: Requirements CRUD -->
+  <script src="features/admissions/requirements/requirements.service.js"></script>
+  <script src="features/admissions/requirements/requirements.controller.js"></script>
+  <!-- Admissions: Previous Schools CRUD -->
+  <script src="features/admissions/previous-schools/previous-schools.service.js"></script>
+  <script src="features/admissions/previous-schools/previous-schools.controller.js"></script>
+  <!-- Admissions: Applicants (List + View) -->
+  <script src="features/admissions/applicants/applicants.service.js"></script>
+  <script src="features/admissions/applicants/applicants.controller.js"></script>
 
   <!-- Campuses feature -->
   <script src="features/campuses/campuses.service.js"></script>
