--- a/frontend/unity-spa/features/dashboard/dashboard.html
+++ b/frontend/unity-spa/features/dashboard/dashboard.html
@@ -81,6 +81,14 @@
           </a>
         </li>
         <li>
+          <a class="flex items-center justify-between px-4 py-3 hover:bg-gray-50" href="#/admissions/apply">
+            <span class="flex items-center text-gray-800">
+              <span class="fas fa-file-alt text-purple-500 w-5 mr-2"></span> Admissions Application
+            </span>
+            <span class="fas fa-angle-right text-gray-400"></span>
+          </a>
+        </li>
+        <li>
           <a class="flex items-center justify-between px-4 py-3 hover:bg-gray-50" href="#!/faculty/profile">
             <span class="flex items-center text-gray-800">
               <span class="fas fa-user text-green-500 w-5 mr-2"></span> My Profile
