--- a/frontend/unity-spa/features/students/viewer.html
+++ b/frontend/unity-spa/features/students/viewer.html
@@ -211,7 +211,7 @@
   </div>
 
   <!-- Checklist -->
-  <div class="bg-white shadow rounded" ng-if="false">
+  <div class="bg-white shadow rounded" ng-if="vm.state && vm.state.roles && (vm.state.roles.indexOf('registrar') !== -1 || vm.state.roles.indexOf('admin') !== -1)">
     <div class="px-4 py-3 border-b border-gray-200 flex items-center justify-between">
       <h2 class="text-lg font-medium text-gray-700">
         <i class="fas fa-tasks mr-2"></i> Checklist
